<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BMIActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/weight_in_pound_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_weight_in_pound"
            android:visibility="gone"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/height_in_inches_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_height_in_inches"
            android:visibility="gone"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/weight_in_kg_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_weight_in_kg"
            android:visibility="gone"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>



        <EditText
            android:id="@+id/height_in_meters_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_height_in_meters"
            android:visibility="gone"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/bmi_kg_meters_button"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:background="@color/cardview_dark_background"
                android:text="@string/bmi_in_kg_meters"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ButtonButton......"
                android:background="@color/black"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/bmi_pound_inches_button"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:background="@color/cardview_dark_background"
                android:text="@string/bmi_in_pound_inches"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/show_result_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/cardview_dark_background"
            android:text="@string/calculate"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textSize="24sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_details_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cardview_dark_background"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_title"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/underweight"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/underweight_value"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/normal_value"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/overweight"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/overweight_value"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/obese"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/obese_value"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>