<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeartRatesActivity"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/first_name_label_text_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/first_name_label"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/show_first_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/last_name_label_text_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/last_name_label"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/show_last_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/date_of_birth_label_text_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth_label"
                android:background="@color/black"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/show_date_of_birth"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/age_label_text_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/age_label"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/show_age"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem"
                android:textColor="@color/white"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/maximum_heart_rate_label_text_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/maximum_heart_rate_label"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/show_maximum_heart_rate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/target_heart_rate_label_text_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/target_heart_rate_label"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/show_target_heart_rate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/enter_first_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/enter_last_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/date_of_birth_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/date_of_birth"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/set_date_of_birth"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/date_of_birth_not_set"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white"/>
        </LinearLayout>

        <Button
            android:id="@+id/show_heart_rate_button"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/cardview_dark_background"
            android:text="@string/show_heart_rate"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/show_health_tip"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_alignBottom="@+id/input_linear_layout"
            android:background="@color/cardview_dark_background"
            android:text="@string/show_health_tip"
            android:textColor="@color/white"
            android:layout_gravity="right"/>

    </LinearLayout>

</RelativeLayout>